DRD-8143: Fix full screen video player layout when enters from inline player
Issue:
- The fullscreen video player layout is broken when enters from inline player.
- This can be reproduced only when we use inline player inside of panels. Because webkit fullscreen is affected by the layout of parent node.

Fix:
- Clear overflow, padding and margin of all the ancestor when it is full screen.

DCO-1.1-Signed-Off-By: Kunmyon Choi kunmyon.choi@lge.com

--- a/css/VideoPlayer.less
+++ b/css/VideoPlayer.less
@@ -89,3 +89,8 @@
 		position: static;
 	}
 }
+:-webkit-full-screen-ancestor:not(iframe) {
+	overflow: visible;
+	padding: 0 !important;
+	margin: 0 !important;
+}
